# Thunder-in-Rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  report.md  style.css  thunder.js
docs/: index.html  style.css  thunder.js
report/: report.md
src/: animes.rs  game.rs  level_splash.rs  main.rs  menu.rs  particle.rs  splash.rs
src/game/: config.rs  esc_menu.rs  gen_enemy.rs  generator.rs  laser.rs  win_lose_screen.rs
